--- a/exercicioSite.html
+++ b/exercicioSite.html
@@ -21,9 +21,9 @@
     </style>
 </head>
 <body>
-    <img src="https://sc.senai.br/sites/default/files/inline-images/SENAI%20WEB%20negt%20small-03_0.png" width="400" alt="logo SENAI" title="SENAI SC">
-    <h1> Desenvolvimento de Sistemas - Turma N1 - 2020</h1>
-    <h2> <sup>Aula de HTML com professor Marcos Bruno Oliveira: 06/05/2020</sup></h2>
+    <header><img src="https://sc.senai.br/sites/default/files/inline-images/SENAI%20WEB%20negt%20small-03_0.png" width="400" alt="logo SENAI" title="SENAI SC">
+        <h1> Desenvolvimento de Sistemas - Turma N1 - 2020</h1>
+        <h2> <sup>Aula de HTML com professor Marcos Bruno Oliveira: 06/05/2020</sup></h2></header>
     <hr>
     <p><p class="monospace">Nesta aula foram apresentadas tags e comandos básicos em <b>HTML</b> para que possamos dar os primeiros passos na criação de uma página <em><strong>web</strong></em>.<br> Além do conteúdo apresentado em aula, pesquisei em outros sites (listados no <sub><i>bottom</i></sub>) para que pudesse desenvolver esse site e entregar o exercício dado em aula.</p>
     <p>A prática pode não levar à perfeição, mas será sempre o melhor <mark><strong>caminho</strong> para o aprendizado.</mark></p>
@@ -106,12 +106,45 @@
                 <td>< mark ></td>
                 <td>Formatação de texto: <mark>texto marcado</mark></td>
             </tr>
+            <tr>
+                <td>< form ></td>
+                <td>Criação de formulário de cadastro, captação de dados do usuário.</td>
+            </tr>
+            <tr>
+                <td>< input ></td>
+                <td>Elemento que recebe dados inseridos pelo usuário.</td>
+            </tr>
+            <tr>
+                <td>< label ></td>
+                <td>Elemento que representa uma legenda para que o usuário saiba o que colocar no input.</td>
+            </tr>
+            <tr>
+                <td>< textarea ></td>
+                <td>Elemento que recebe uma capacidade maior de caracteres, específico para mensagens longas.</td>
+            </tr>
+            <tr>
+                <td>< article ></td>
+                <td>Elemento que representa uma composição independente em um documento, página, app, ou site, ou que é destinado a ser distribuído de forma independente ou reutilizável. Por exemplo, o post de um fórum, artigo de revista ou jornal.</td>
+            </tr>
+            <tr>
+                <td>< main ></td>
+                <td>Elemento que define o conteúdo principal dentro do <i>body</i>. Entende-se como conteúdo principal aquele relacionado diretamente com o tópico central da página ou com a funcionalidade central da aplicação. O mesmo deverá ser único na página, ou seja, dentro do elemento <i>main</i> não deverão ser incluidas seções da página que sejam comuns a todo o site ou aplicação, tais como mecanismos de navegação, informações de copyright, logotipo e campos de busca (a não ser, é claro,  caso a função principal do documento seja  fazer algum tipo de busca).</td>
+            </tr>
+            <tr>
+                <td>< footer ></td>
+                <td>Rodapé. Contém informações sobre o
+                    autor da seção de dados, direitos autorais ou links
+                    para documentos relacionados.</td>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
         </tbody>
     </table>
     <br>
     <hr>
-    <p><u>Usei como ferramenta de pesquisa os sites abaixo:</u> </p>
-    <p style="background-color:wheat; font-size: 14pt; font-family: Arial, Helvetica, sans-serif;"><a href="https://html.com/">html.com</a>___<a href="https://www.w3schools.com/html/">w3schools</a></p>
-
+    <p><u>Saiba mais nos sites abaixo:</u> </p>
+    <p ></p>
+    <footer style="background-color:wheat; color: black: 14pt; font: normal 15px Arial"><a href="https://html.com/">html.com</a>    <a href="https://www.w3schools.com/html/">w3schools</a>     <a href="https://www.freecodecamp.org/">freecodecamp</a>    <a href="https://www.tutorialspoint.com/html/index.htm">tutorialspoint</a>      <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/">developer.mozilla.org</a></footer>
 </body>
 </html>
