--- a/SiteCalculadora/calculadoraComCSS/index.html
+++ b/SiteCalculadora/calculadoraComCSS/index.html
@@ -4,24 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CALCULADORA</title>
-  <style>
-    header{
-      font: normal 23pt Courier;
-      color: white;
-      text-shadow:3px 3px 4px rgba(0, 0, 0, 0.664);
-      margin-left: 575px;
-      margin-top: 140px;
-    }
-    section{
-      background-color: rgb(100, 99, 97);
-      border-radius: 8px;
-      padding: 15px;
-      width: 180px;
-      margin: auto;
-      box-shadow: 10px 10px 6px rgba(0, 0, 0, 0.603);
-      margin-top: 40px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body background="imgFundo.jpg">
 
@@ -54,57 +37,6 @@
         </table>
       </form>    
   </section>
-  
-  <script>
-
-    function somar() {
-
-      const n1 = document.getElementById("n1");
-      const n2 = document.getElementById("n2");
-
-      document.getElementById("res").value = 
-      Number(n1.value) + Number(n2.value);
-
-      n1.value="";
-      n2.value="";
-    }
-
-    function subtrair() {
-
-    const n1 = document.getElementById("n1");
-    const n2 = document.getElementById("n2");
-
-    document.getElementById("res").value = 
-    Number(n1.value) - Number(n2.value);
-
-    n1.value="";
-    n2.value="";
-    }
-
-    function multiplicar() {
-
-    const n1 = document.getElementById("n1");
-    const n2 = document.getElementById("n2");
-
-    document.getElementById("res").value = 
-    Number(n1.value) * Number(n2.value);
-
-    n1.value="";
-    n2.value="";
-    }
-
-    function dividir() {
-
-    const n1 = document.getElementById("n1");
-    const n2 = document.getElementById("n2");
-
-    document.getElementById("res").value = 
-    Number(n1.value) / Number(n2.value);
-
-    n1.value="";
-    n2.value="";
-    }
-
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
