atualização de exercícios logica

--- a/Exercícios/Exercícios Lógica Lucas/conversorTemperatura/index.html
+++ b/Exercícios/Exercícios Lógica Lucas/conversorTemperatura/index.html
@@ -13,7 +13,7 @@
         <h1>Conversor Celsius / Fahrenheit</h1>
         <div id="form">
             <label for="tempCelsius">Digite a Temperatura:</label><br>
-            <input type="number" id="celcius" placeholder="graus Celsius"><br>
+            <input type="number" id="celcius" placeholder="graus Celsius" onfocus="this.value=''"><br>
             <input type="submit" value="Converter para Fahrenheit" onclick="converter()">
         </div>
         <div id="res"></div>
