--- a/Exercícios/Exercícios Lógica Lucas/numero100/index.html
+++ b/Exercícios/Exercícios Lógica Lucas/numero100/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>100!</title>
-    <link rel="stylesheet" href="ambiente.css">
+    <title>Document</title>
 </head>
 <body>
-    <header>SENAI - Lógica de Programação - Prof. Lucas Naspolini</header>
-    <hr>
-    <div>
-        <p>Qual é o número?</p>
-        <label for="numero">Digite um número:</label>
-        <input type="number" name="numero" id="numero" value="Digite aqui" required>
-        <button type="submit" onclick="testar()">Pronto</button>
-        <button type="reset" onclick="limpar()">Limpar</button>
-        <br>
-        <br>
-    </div>
-    <script src="ambiente.js"></script>
+    <main>
+        <h2>TOP SURF POINTS SC</h2>
+        <ul>
+            <li>Floripa</li>
+                <ol>
+                    <li>Matadeiro</li>
+                    <li>Campeche</li>
+                    <li>Rio Tavares</li>
+                    <li>Joaquina</li>
+                    <li>Moçambique</li>
+                </ol>
+            <li>Imbituba</li>
+                <ol>
+                    <li>Praia da Vila</li>
+                    <li>Praia do Rosa</li>
+                </ol>
+            <li>Palhoça</li>
+                <ol>
+                    <li>Prainha</li>
+                    <li>Guada do Embaú</li>
+                </ol>
+        </ul>
+    </main>
 </body>
 </html>
