refatoração do codigo salada de fruta

--- a/Site-salada/index.html
+++ b/Site-salada/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Salada de Frutas</h1>
 
-    <input type="text" id="fruta">
-    <button id="btn">Adicionar Fruta</button>
+    <input type="text" id="fruta" onfocus="this.value=''">
+    <button id="btn" onclick="add()">Adicionar Fruta</button>
     
     <ul id="lista"></ul>
     <script src="script.js"></script>
